[package]
name = "zipper_macros"
version = "0.1.0"
edition = "2021"
authors = ["Cavey Cool <caveycool@gmail.com>"]
repository = "https://github.com/cavemanloverboy/zipper"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.103", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"