[package]
name = "solana-zipper"
version = "1.0.0"
edition = "2021"
authors = ["Cavey Cool <caveycool@gmail.com>"]
repository = "https://github.com/cavemanloverboy/zipper"
license = "MIT OR Apache-2.0"
description = "This repository contains the helper attribute proc macros for the zipper smart contract on Solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "zipper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
seq-macro = "0.3.1"
zipper_macros = "1.0.0"
solana-security-txt = "1.0.1"

[dev-dependencies]
anchor-client = "0.25.0"
anyhow = "1.0.65"
rand = "0.7.3"
shellexpand = "2.1.2"
spl-associated-token-account = "1.0.5"
